k8s/apps/overlays/cell-a/networking/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dr
spec:
  host: cell-a-svc.cell-a.svc.cluster.local
