k8s/apps/overlays/cell-a/networking/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
    - cell-a-svc.cell-a.svc.cluster.local
  http:
    - route:
        - destination:
            host: cell-a-svc.cell-a.svc.cluster.local
